--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           </div>
 
           <!-- Ansormed inson rasim  -->
-          <img class="hero-image" src="/images/hero.png" alt="ansormed shifokor inson rasmi" width="423" height="504" srcset="/images/hero.png 1x,
+          <img class="hero-image" src="/images/hero.png" alt="ansormed shifokor inson rasmi" width="423" height="504" srcset="/images/hero.png 1x
           /images/hero@2x.png 2x">
      </section>
 
