--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
      <section id="features-section">
           <!-- FEATURES  -->
           <h2 class="features-heading-title">Xizmatlar</h2>
-          <ul >
+          <ul class="test" >
                <li>
                     <div class="features-list">
                          <!-- feature(hijoma) rasmi  -->
