shift and resize the images,

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                <li>
                     <div class="features-list">
                          <!-- feature(hijoma) rasmi  -->
-                         <div><img class="features-image" src="/images/image-hijoma.jpg" alt="hijoma rasmi" width="200" height="200" srcset="/images/image-hijoma.jpg 1x, /images/image-hijoma@2x.jpg 2x"></div>
+                         <div><img class="features-image" src="/images/image 1.png" alt="hijoma rasmi" width="200" height="200" srcset="/images/image 1.png 1x, /images/image 1@2x.png 2x"></div>
                          <div class="features-content">
                               <h3 class="features-heading">Hijoma</h3>
                               <p class="features-info">Imom Termiziy Abdulloh ibn Abbos raziyallohu anhumodan rivoyat qilgan hadisda rasululloh sallallohu alayhi va sallam dedilar: «Sizlar hijoma qiladigan kunlaringizning eng yaxshisi 17, 19 va 21-kunlardir» (bu kunlar hijrij-kamariy hisobdagi oylar kunlaridir).</p>
@@ -86,8 +86,8 @@
                     <div class="features-list">
                          <!-- feature(terapiya) rasmi  -->
                          <div>
-                              <img class="features-image" src="/images/image-terapiya.jpg" alt="terapiya bilan davolanish rasmi" width="200" height="200"
-                              srcset="/images/image-terapiya.jpg 1x, /images/image-terapiya@2x.jpg 2x">
+                              <img class="features-image" src="/images/image 2.png" alt="terapiya bilan davolanish rasmi" width="200" height="200"
+                              srcset="/images/image 2.png 1x, /images/image 2@2x.png 2x">
                          </div>
                          <div class="features-content">
                               <h3 class="features-heading">Manual terapiya</h3>
@@ -101,8 +101,8 @@
                     <div class="features-list">
                          <!-- feature(zuluk) rasmi  -->
                          <div>
-                              <img class="features-image" src="/images/image-zuluk.jpg" alt="zuluk bilan davolanish  rasmi" width="200" height="200"
-                              srcset="/images/image-zuluk.jpg 1x, /images/image-zuluk@2x.jpg 2x"  >
+                              <img class="features-image" src="/images/image 3.png" alt="zuluk bilan davolanish  rasmi" width="200" height="200"
+                              srcset="/images/image 3.png 1x, /images/image 3@2x.png 2x"  >
                          </div>
                          <div class="features-content">
                               <h3 class="features-heading">Zuluk bilan davolash</h3>
@@ -116,8 +116,8 @@
                     <div class="features-list">
                          <!-- feature(tabiy dori) rasmi  -->
                          <div>
-                              <img class="features-image" src="/images/image-tabiy-dori.jpg" alt="tabiy dorilar rasmi" width="200" height="200"
-                              srcset="/images/image-tabiy-dori.jpg 1x, /images/image-tabiy-dori@2x.jpg 2x">
+                              <img class="features-image" src="/images/image 4.png" alt="tabiy dorilar rasmi" width="200" height="200"
+                              srcset="/images/image 4.png 1x, /images/image 4@2x.png 2x">
                          </div>
                          <div class="features-content">
                               <h3 class="features-heading">Tabiiy dori vositalari</h3>
