wrap the header with container

--- a/index.html
+++ b/index.html
@@ -22,30 +22,30 @@
 
      <!-- SITE HEADER -->
      <nav class="site-header">
-          <div class="header-logo">
-               <a href="#">
-                    <!-- Ansormed logo rasmi  -->
-                    <img
-                    src="images/logo.png"
-                    alt="AnsorMedning logosi" width="50" height="50"
-                    srcset="iimages/logo.png 1x, images/logo@2x.png 2x"/>
-                    <span>AnsorMed</span>
-               </a>
+          <div class="header-container">
+               <div class="header-logo">
+                    <a href="#">
+                         <!-- Ansormed logo rasmi  -->
+                         <img
+                         src="images/logo.png"
+                         alt="AnsorMedning logosi" width="50" height="50"
+                         srcset="iimages/logo.png 1x, images/logo@2x.png 2x"/>
+                         <span>AnsorMed</span>
+                    </a>
+               </div>
+               <!-- Navigation bar  -->
+               <div class="sitenav">
+                    <ul class="sitenav-list">
+                         <li class="sitenav-item"><a href="#">Xizmatlar</a></li>
+                         <li class="sitenav-item"><a href="#">Dorilar</a></li>
+                         <li class="sitenav-item"><a href="#">Asal</a></li>
+                         <li class="sitenav-item"><a href="#">Kontaktlar</a></li>
+                         <li class="sitenav-item"><a href="#">Blog</a></li>
+                    </ul>
+               </div>
+               <!-- Qabulga yozilish tugmasi  -->
+               <a class="main-button" href="#">Qabulga yozilish</a>
           </div>
-
-          <!-- Navigation bar  -->
-          <div class="sitenav">
-               <ul class="sitenav-list">
-                    <li class="sitenav-item"><a href="#">Xizmatlar</a></li>
-                    <li class="sitenav-item"><a href="#">Dorilar</a></li>
-                    <li class="sitenav-item"><a href="#">Asal</a></li>
-                    <li class="sitenav-item"><a href="#">Kontaktlar</a></li>
-                    <li class="sitenav-item"><a href="#">Blog</a></li>
-               </ul>
-          </div>
-
-          <!-- Qabulga yozilish tugmasi  -->
-          <a class="main-button" href="#">Qabulga yozilish</a>
      </nav>
 
 
