shift the footer actice condition

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                </a>
           </div>
           <!-- LINKLAR  -->
-          <div class="sitenav">
+          <div class="sitenav site-footer-list">
                <ul class="sitenav-list">
                     <li class="sitenav-item"><a href="#">Xizmatlar</a></li>
                     <li class="sitenav-item"><a href="#">Dorilar</a></li>
