add container for both header and footer

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
      <!-- SITE HEADER -->
      <nav class="site-header">
-          <div class="header-container">
+          <div class="container">
                <div class="header-logo">
                     <a href="#">
                          <!-- Ansormed logo rasmi  -->
@@ -147,25 +147,27 @@
 
      <!-- SITE FOOTER  -->
      <footer class="site-footer">
-          <div class="header-logo">
-               <a href="#">
-                    <!-- Ansormed logo rasmi  -->
-                    <img
-                    src="images/logo.png"
-                    alt="AnsorMedning logosi" width="50" height="50"
-                    srcset="iimages/logo.png 1x, images/logo@2x.png 2x"/>
-                    <span>AnsorMed</span>
-               </a>
-          </div>
-          <!-- LINKLAR  -->
-          <div class="sitenav site-footer-list">
-               <ul class="sitenav-list">
-                    <li class="sitenav-item"><a href="#">Xizmatlar</a></li>
-                    <li class="sitenav-item"><a href="#">Dorilar</a></li>
-                    <li class="sitenav-item"><a href="#">Asal</a></li>
-                    <li class="sitenav-item"><a href="#">Kontaktlar</a></li>
-                    <li class="sitenav-item"><a href="#">Blog</a></li>
-               </ul>
+          <div class="container">
+               <div class="header-logo">
+                    <a href="#">
+                         <!-- Ansormed logo rasmi  -->
+                         <img
+                         src="images/logo.png"
+                         alt="AnsorMedning logosi" width="50" height="50"
+                         srcset="iimages/logo.png 1x, images/logo@2x.png 2x"/>
+                         <span>AnsorMed</span>
+                    </a>
+               </div>
+               <!-- LINKLAR  -->
+               <div class="sitenav site-footer-list">
+                    <ul class="sitenav-list">
+                         <li class="sitenav-item"><a href="#">Xizmatlar</a></li>
+                         <li class="sitenav-item"><a href="#">Dorilar</a></li>
+                         <li class="sitenav-item"><a href="#">Asal</a></li>
+                         <li class="sitenav-item"><a href="#">Kontaktlar</a></li>
+                         <li class="sitenav-item"><a href="#">Blog</a></li>
+                    </ul>
+               </div>
           </div>
      </footer>
 
