add cta section, connect links to cta section

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     </ul>
                </div>
                <!-- Qabulga yozilish tugmasi  -->
-               <a class="main-button" href="#">Qabulga yozilish</a>
+               <a class="main-button" href="#index-cta">Qabulga yozilish</a>
           </div>
      </nav>
 
@@ -56,7 +56,7 @@
                     <h2 class="hero-heading">Tabiiy davolash usullari yordamida kasalliklardan xalos bo’ling.</h2>
                     <p class="hero-text">Hijoma, manual terapiya, zuluk va turli tabiiy giyohlar eng ko’p uchraydigan kasalliklarni yengishda yordam beradi. Sog’ligingizni o’z ishining professionallariga ishonib topshiring.</p>
                     <!-- Qabulga yozilish tugmasi  -->
-                    <a class="main-button hero-button" href="#">Qabulga yozilish</a>
+                    <a class="main-button hero-button" href="#index-cta">Qabulga yozilish</a>
                </div>
                <!-- Ansormed shifokor rasm  -->
                <img class="hero-image" src="images/hero.png"
@@ -128,18 +128,18 @@
 
           </ul>
           <!-- Qabulga yozilish tugmasi  -->
-          <div class="feature-button-wrapper"><a class="main-button " href="#">Qabulga yozilish</a></div>
+          <div class="feature-button-wrapper"><a class="main-button " href="#index-cta">Qabulga yozilish</a></div>
 
 
      </section>
 
      <!-- Qabul  -->
-     <section class="register">
+     <section class="register" id="index-cta">
           <h2 class="register-heading">Qabulga ro’yxatdan o’ting</h2>
 
           <div class="register-button-wrapper">
-               <a class="register-button" href="#">Qo’ng’iroq qilish</a>
-               <a class="register-button" href="#">Telegramdan yozish</a>
+               <a class="register-button" href="tel:+998901333344">Qo’ng’iroq qilish</a>
+               <a class="register-button" href="https://t.me/ansor_admin" target="_blank">Telegramdan yozish</a>
           </div>
 
      </section>
