--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                          <img
                          src="images/logo.png"
                          alt="AnsorMedning logosi" width="50" height="50"
-                         srcset="iimages/logo.png 1x, images/logo@2x.png 2x"/>
+                         srcset="images/logo.png 1x, images/logo@2x.png 2x"/>
                          <span>AnsorMed</span>
                     </a>
                </div>
@@ -154,7 +154,7 @@
                          <img
                          src="images/logo.png"
                          alt="AnsorMedning logosi" width="50" height="50"
-                         srcset="iimages/logo.png 1x, images/logo@2x.png 2x"/>
+                         srcset="images/logo.png 1x, images/logo@2x.png 2x"/>
                          <span>AnsorMed</span>
                     </a>
                </div>
